syntax= "proto3";

option go_package = "./randomNumbers";

package api;

service RandomNumbers {
  rpc GenerateRequest(GenRequest) returns (GenResponse) {}
}

message GenRequest {
  string request = 1;
}

message GenResponse {
  string result = 1;
}